Removed cruft.